# ru-smb-pd-anonymizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  security.yml
examples/airflow/: dag_anonymize_crm.py
examples/configs/: policy_analytics.yaml  policy_ml_training.yaml  policy_tech_support.yaml
examples/data/: synthetic_crm.csv  synthetic_tickets.csv
examples/dbt/macros/: pd_anonymize.sql
examples/dbt/models/: anonymized_customers.sql
examples/notebooks/: 01_quickstart_anonymization.ipynb  02_ml_training_pipeline.ipynb
scripts/: lint.sh  perf_check.sh  security_scan.sh
src/ru_smb_pd_anonymizer/: __init__.py
src/ru_smb_pd_anonymizer/ai/: base.py  field_classifier.py  policy_suggester.py
src/ru_smb_pd_anonymizer/classification/: risk_model.py  sample_profiler.py  schema_analyzer.py
src/ru_smb_pd_anonymizer/cli/: main.py
src/ru_smb_pd_anonymizer/dtypes/: classifiers.py  detectors.py  models.py
src/ru_smb_pd_anonymizer/io/: csv_loader.py  db_loader.py  jsonl_loader.py  parquet_loader.py
src/ru_smb_pd_anonymizer/pipeline/: airflow_operator.py  core.py  dbt_macros.sql  pandas_adapter.py  sqlalchemy_adapter.py
tests/: conftest.py
tests/integration/: test_airflow_example_dag.py  test_dbt_macro_rendering.py  test_full_flow_csv_to_csv.py
tests/unit/: test_ai_stubs.py  test_classification_risk_model.py  test_cli_commands.py  test_detectors_ru_formats.py  test_pipeline_core.py  test_policies_model.py  test_transforms_fio.py  test_transforms_inn.py  test_transforms_passport.py  test_transforms_snils.py
(+26 files in other folders)
